[SEARCH-163] Upgrade Junit from v4 to v5; Use `JUnit Vintage test engine` in shared-test for plugins with Junit 4 to pass