@@ -3,12 +3,10 @@ package com.funnelback.publicui.search.model.transaction.facet.order;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Stream;
 
-import org.junit.runners.Parameterized.Parameters;
+import org.junit.jupiter.params.provider.Arguments;
 
 import com.funnelback.publicui.search.model.transaction.Facet.CategoryValue;
 
@@ -33,21 +31,18 @@ public class ByLabelAsNumberAscendingTest extends FacetComparatorBaseTest {
     public boolean getNullsLast() {
         return true;
     }
-    
-    @Parameters
-    public static Collection<Object[]> data() {
+
+    protected static Stream<Arguments> data() {
         CategoryValue cv_10 = forLabel("10");
         CategoryValue cv_1 = forLabel("1");
         CategoryValue cv_0 = forLabel("0");
         CategoryValue cv_9 = forLabel("9");
         CategoryValue cv_null = forLabel(null);
-        
-        return Arrays.asList(new Object[][] {     
-             { Arrays.asList(cv_10, cv_1, cv_null, cv_0, cv_9), 
-                 Arrays.asList(cv_0, cv_1, cv_9, cv_10, cv_null)},  
-            { Arrays.asList(cv_0), 
-                     Arrays.asList(cv_0)},
-           });
+
+        return Stream.of(
+            Arguments.of(Arrays.asList(cv_10, cv_1, cv_null, cv_0, cv_9), Arrays.asList(cv_0, cv_1, cv_9, cv_10, cv_null)),
+            Arguments.of(List.of(cv_0),  List.of(cv_0))
+        );
     }
     
     private static CategoryValue forLabel(String label) {
